third_party/move/move-compiler-v2/tests/more-v1/expansion/use_struct_tparam_shadows.exp

Diagnostics:
error: cannot return `S` from a function with result type `X::S`
   ┌─ tests/more-v1/expansion/use_struct_tparam_shadows.move:12:9
   │
12 │         x
   │         ^
